--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
     <header>
         <div class="container">
             <h1>Tharuni Thirumavalavan</h1>
-            <p>Stadtplaner | Urban Planner | M.Sc. Raumplanung</p>
+            <p>Stadtplaner | Urban Planner | M.Sc. Stadtplanung</p>
             <p style="font-size: 0.95rem; margin-top: 10px;">RWTH Aachen University</p>
             <div class="contact-links">
                 <a href="mailto:your.email@example.com">✉ Email</a>
                 <a href="https://linkedin.com/in/yourprofile" target="_blank">💼 LinkedIn</a>
-                <a href="https://github.com/yourusername" target="_blank">💻 GitHub</a>
+                <a href="https://github.com/t-thirumavalavan" target="_blank">💻 GitHub</a>
                 <a href="cv.pdf" download>📄 Download CV</a>
             </div>
         </div>
